[tool.poetry]
name = "valopy"
version = "0.1.0"
description = ""
authors = ["Jedddy <jedbalita25@gmail.com>"]
readme = "README.md"
packages = [{include = "async_valorant"}]

[tool.poetry.dependencies]
python = "^3.10"

requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
